<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shoppingrelative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShoppingCartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.commen.custom.ToolbarCustom
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E24146"
            app:isShowLeftImageView="false"
            app:isShowRightImageView="false"
            app:isShowSettingTextView="false"
            app:title="@string/shoopingcartTextViewText"
            app:titleColor="@color/white" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_choppingCart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:childIndicator="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/shoopingcartLinearLayoutHeight"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/all_chekbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/shoopingcartCheckBoxMarginLeft"
                    android:layout_marginRight="@dimen/shoopingcartCheckBoxMarginRight"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:minHeight="@dimen/shoopingcartCheckBoxminHeight"
                    android:paddingLeft="@dimen/shoopingcartCheckBoxpadingLeft"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:visibility="visible"
                    android:paddingStart="@dimen/shoopingcartCheckBoxpadingLeft"
                    tools:ignore="RtlSymmetry"
                    android:layout_marginStart="@dimen/shoopingcartCheckBoxMarginLeft"
                    android:layout_marginEnd="@dimen/shoopingcartCheckBoxMarginRight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/shoopingcartsumMarginLeft"
                    android:text="@string/shoopingcartsumText"
                    android:textSize="@dimen/shoopingcartsumTextSize"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/shoopingcartsumMarginLeft" />

                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoopingcartzeroText"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/shoopingcartzeroTextSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/orange"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/shoopingcartdeleteText"
                android:textColor="#FAFAFA"
                android:focusable="true" />

            <TextView
                android:id="@+id/tv_go_to_pay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E24146"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/shoopingcartPayText"
                android:textColor="#FAFAFA"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>